--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                 gyroscope; picture-in-picture" 
                 allowfullscreen></iframe>
                                                                 <link rel="stylesheet" href="style.css">
-                    <a href ="aboutus.html">to my new contact page</a>                                                
+                    <a href ="contact.html">to my new contact page</a>                                                
 </body>
 </html>
 
