added a style class to photos

--- a/homepage.html
+++ b/homepage.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  <head> <link rel="stylesheet" href="style.css">
   </head>
+  
+ <h1>  <p>Okotoks pizza</p> 
+
+  ×ª×‘× ×™×•×ª ×ž××ž×¨×©×™×—×”×¦×¤×”, ×ž×“×¢ ×¦×™×œ×•× ×”×¡×¤×¨×•×ª ×‘, ×’× ×ª×™×‘×ª ×ž×—×œ×™×˜×”
+  ×”××˜×ž×•×¡×¤×™×¨×” ×‘×“×£. ×›×“×™ ×§×•×“×ž×•×ª ×™×•×¦×¨×™× ×©×™×ž×•×©×™ ×‘×”, ×
+<h1>
+  
+  
+  
   <body>
     <p>Assignment w4a</p>
-        <img src="delish-homemade-pizza-horizontal-1542312378.png">
-            <img src="pizza shop.jpeg"> 
+        <img src="delish-homemade-pizza-horizontal-1542312378.png" class="pizzaphoto"> 
+            <img src="pizza shop.jpeg" class="pizzaphoto">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/nEfcKExVKjo"
                 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media;
                 gyroscope; picture-in-picture" 
                 allowfullscreen></iframe>
-                                                                <link rel="stylesheet" href="style.css">
+                                                               
                     <a href ="aboutus.html">to my new contact page</a>                                                
 </body>
 </html>
