Added SEO tags to site

--- a/aboutus.html
+++ b/aboutus.html
@@ -5,6 +5,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Ngure Njororge">
+    <meta name="description" content="About us and information">
     <title>About Us</title>
 
 </head>
