--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,13 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact</title>
+</head>
+<body>
+    
+</body>
+</html>
 <a href ="mailto:info@okotokspizza.ca">Mail Me!</a>
 <p></p><a href ="tel:4035555555">403 555 5555</a><p></p>
