Added new CSS selectors

--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="My Contact page">
+    <meta name="author" content="Ngure Njoroge">
     <title>Contact</title>
 </head>
 <body>
