Added layout tags

--- a/aboutus.html
+++ b/aboutus.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Ngure Njororge">
     <meta name="description" content="About us and information">
+    <link rel="stylesheet" href="style.css">
     <title>About Us</title>
 
 </head>
