--- a/homepage.html
+++ b/homepage.html
@@ -11,35 +11,29 @@
 </head>
 
 <body>
-  <h1> <a href="#anchor">Link To Lower</a> Okotoks pizza Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
-    consequat ornare auctor. Mauris convallis, quam at
-    aliquet dapibus, ex lacus laoreet mi, id finibus enim sapien non sem. Sed rhoncus posuere metus non consequat.</h1>
-  <div>
-    <p> 
+  <h1> <a href="#anchor">Link To Lower</a> </h1>
+  <div class="grid-container">
+    <p>
       efficitur
       Nulla sed finibus erat. Cras non leo non urna dignissim tristique. Integer nisi augue, finibus sed congue sed,
     </p>dignissim nec erat. Vivamus suscipit justo eget lorem varius, nec vehicula metus ultricies. Pellentesque mi
   </div>
   <Div>Fusce lacinia ipsum vitae leo commodo ultrices. Aenean at sodales ligula. Aenean facilisis dolor diam, ut semper
-    risus
-    ornare sit amet. Suspendisse ullamcorper sed tortor a laoreet. Praesent cursus eu urna et iaculis. Nam et vestibulum
-    lectus, non interdum ligula. Nam luctus egestas nulla nec venenatis. Etiam ultricies sed sapien ut fringilla. Fusce
+    <article>risus Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio maxime mollitia optio consectetur
+      dolorem unde, quos error, magni ducimus adipisci fuga saepe maiores ipsa iure eos molestiae, vel ea? Deserunt.
+    </article> tricies sed sapien ut fringilla. Fusce
     dignissim nibh quis ante efficitur, quis pellentesque nisl vulputate.
   </Div>
   <Div>Vivamus mollis risus ut enim fermentum, et vehicula odio pulvinar. Ut tincidunt lacus nec pellentesque varius.
     Cras
-    facilisis ipsum maximus mattis pulvinar. Morbi diam sem, auctor a scelerisque sit amet, euismod sit amet felis. Sed
-    efficitur eget quam ac eleifend. Quisque tristique, lectus ac sodales ornare, urna lorem blandit dui, vel vulputate
-    orci ex sit amet arcu. Nunc finibus diam sit amet urna varius, a vehicula quam rhoncus. Proin ac risus nec quam
-    pellentesque mollis eget et eros. Morbi consequat sit amet ligula in tristique. Proin mattis aliquet ligula at
+
     rutrum.
     Nullam pharetra lacus ligula, non suscipit sapien aliquam sit amet. Nam nec diam a dui porta venenatis ut at libero.
     Mauris malesuada eleifend pharetra.</Div>
 
   <Div>Pellentesque sed ullamcorper magna, in lobortis odio. Aenean mattis dignissim metus, ac pulvinar ligula. Duis
     lobortis
-    nibh eu nibh fringilla luctus. Mauris ut varius ligula, id tincidunt neque. Aenean eros nisl, fermentum a ante et,
-    pellentesque dictum erat. Duis a orci ac risus consequat scelerisque. Maecenas nec molestie leo. Aliquam tempus
+    nsequat scelerisque. Maecenas nec molestie leo. Aliquam tempus
     ultricies est, viverra facilisis dolor auctor at.</Div>
 
 
