Added SEO tags to site

--- a/homepage.html
+++ b/homepage.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="author" content="Ngure Njoroge">
+  <meta name="author" content="Ngure">
   <meta name="description" content="Homepage for Site">
   <link rel="stylesheet" href="style.css">
   <title>Okotoks pizza</title>
