created new okotokspizza web site and went to workgit status

--- a/aboutus.html
+++ b/aboutus.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Ngure Njororge">
+    <meta name="author" content="Ngure">
     <meta name="description" content="About us and information">
     <link rel="stylesheet" href="style.css">
     <title>About Us</title>
