--- a/homepage.html
+++ b/homepage.html
@@ -10,51 +10,39 @@
   <title>Okotoks pizza</title>
 </head>
 
-<body>
-  <h1> <a href="#anchor">Link To Lower</a> </h1>
-  <div class="grid-container">
-    <p>
-      efficitur
-      Nulla sed finibus erat. Cras non leo non urna dignissim tristique. Integer nisi augue, finibus sed congue sed,
-    </p>dignissim nec erat. Vivamus suscipit justo eget lorem varius, nec vehicula metus ultricies. Pellentesque mi
+<body id="grid-container">
+  <div id="header">
+    <div><h2>Okotoks pizza</h2></div>
+    <div>two</div>
+    <div>three</div>
+    <div><a href="#anchor">Link To Lower</a></div>
+    <div><a href="tel:4035555555">403 555 5555</a></div>
   </div>
-  <Div>Fusce lacinia ipsum vitae leo commodo ultrices. Aenean at sodales ligula. Aenean facilisis dolor diam, ut semper
-    <article>risus Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio maxime mollitia optio consectetur
-      dolorem unde, quos error, magni ducimus adipisci fuga saepe maiores ipsa iure eos molestiae, vel ea? Deserunt.
-    </article> tricies sed sapien ut fringilla. Fusce
-    dignissim nibh quis ante efficitur, quis pellentesque nisl vulputate.
-  </Div>
-  <Div>Vivamus mollis risus ut enim fermentum, et vehicula odio pulvinar. Ut tincidunt lacus nec pellentesque varius.
-    Cras
+  <div id="content">
+    <div>
+      <img src="pizza shop.jpeg" alt="picture of a cartoon pizza shop" class="pizzaphoto">
+      <p>Assignment w4a</p>
+      Lorem ipsum dolor sit amet, consectetur commodi soluta.
+      laboriosam iure, id qui quisquam, illo obcaecati ex iste
+      dicta facere fugit iusto quas a. Architecto, optio?
+    </div>
+    <div>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/nEfcKExVKjo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media;
+    gyroscope; picture-in-picture" allowfullscreen>
+      </iframe>
+      <img src="delish-homemade-pizza-horizontal-1542312378.png" alt="photo of a pizza ,birds eye" class="pizzaphoto">
+    </div>
+  </div>
 
-    rutrum.
-    Nullam pharetra lacus ligula, non suscipit sapien aliquam sit amet. Nam nec diam a dui porta venenatis ut at libero.
-    Mauris malesuada eleifend pharetra.</Div>
-
-  <Div>Pellentesque sed ullamcorper magna, in lobortis odio. Aenean mattis dignissim metus, ac pulvinar ligula. Duis
-    lobortis
-    nsequat scelerisque. Maecenas nec molestie leo. Aliquam tempus
-    ultricies est, viverra facilisis dolor auctor at.</Div>
-
-
-  <p>Assignment w4a</p>
-  <img src="delish-homemade-pizza-horizontal-1542312378.png" alt="photo of a pizza ,birds eye" class="pizzaphoto">
-  <img src="pizza shop.jpeg" alt="picture of a cartoon pizza shop" class="pizzaphoto">
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/nEfcKExVKjo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media;
-                gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <div id="footer">
+    <div></div>
+    <div></div>
+    <div><a href="aboutus.html">to my new contact page</a></div>
+  </div>
 
 
+  <div id="anchor">Bottom    &copy;file:///Users/ngurenjoroge/Innotech/Projects/okotoks%20pizza/homepage.html#anchor</div>
 
-
-
-
-
-
-  <div id="anchor">Bottom</div>
-
-
-
-  <a href="aboutus.html">to my new contact page</a>
 
 </body>
 
