gosh i suck this commit is for the sake of the missing measurement unit assignment

--- a/final-okotoks/with-sidebar/Okotoks Pizza new/aboutus.html
+++ b/final-okotoks/with-sidebar/Okotoks Pizza new/aboutus.html
@@ -8,7 +8,6 @@
     <meta name="keywords" content="whats the best of feed">
     <meta name="keywords" content="faq">
     <meta name="keywords" content="connect us">
-    <meta name="keywords" content="what we can do">
     <meta name="keywords" content="help">
     <!-- style css -->
     <link rel="stylesheet" href="./style/style.css">
@@ -16,16 +15,15 @@
     <title>about-us</title>
 </head>
 
-<body>
+<body class="grid-wrapper">
     <div class="header">
         <div class="navbar">
             <div class="logo">
-                <img src="./img/logo.png" alt="">
+                <img src="./img/okotoks-pizza-logo.png" alt="">
             </div>
             <div class="links">
                 <a href="./home.html">Home</a>
                 <a href="./aboutus.html">About Us</a>
-                <a href="./cart.html">cart</a>
                 <a href="./menu.html">Menu</a>
             </div>
             <div class="phone">
@@ -89,7 +87,7 @@
             All content © 2020 Okotoks Pizza
         </div>
         <div class="logo">
-            <img src="./img/logo.png" alt="">
+            <img src="./img/okotoks-pizza-logo.png" alt="">
         </div>
         <div class="links">
             <a href="tel:+17167934">+1-716-7934</a>
@@ -97,19 +95,8 @@
         </div>
     </div>
     <!-- icon -->
-    <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
-    <!-- jquery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script>
-        $(document).ready(function () {
-            $(".navbar [href]").each(function () {
-                if (this.href == window.location.href) {
-                    $(this).addClass("active");
-                }
-            });
-        });
-
-    </script>
+    
+    
 </body>
 
 </html>
