--- a/final-okotoks/with-sidebar/Okotoks Pizza new/home.html
+++ b/final-okotoks/with-sidebar/Okotoks Pizza new/home.html
@@ -14,11 +14,11 @@
     <title>Okotoks-Pizza</title>
 </head>
 
-<body>
+<body class="grid-wrapper">
     <div class="header">
         <div class="navbar">
             <div class="logo">
-                <img src="okotoks-pizza-logo.png" alt="">
+                <img src="./img/okotoks-pizza-logo.png" alt="">
             </div>
             <div class="links">
                 <a href="./home.html">Home</a>
@@ -32,24 +32,27 @@
             </a>
         </div>
     </div>
-    <section>
+    <div class="sidebar1">
         <h3>
             Okotoks Pizza
         </h3>
-    </section>
-    <div class="container">
+    </div>
+    <div class="content">
         <div class="intro_video">
+            <h3>Have a look for yourself! </h3>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/nEfcKExVKjo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media;
-    gyroscope; picture-in-picture" allowfullscreen>
-            </iframe>
+    gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="map">
+            <iframe width="500px" height="350px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
+                src="https://maps.google.com/maps?width=100%25&amp;height=500&amp;hl=en&amp;q=1%20Grafton%20Street,%20Dublin,%20Ireland+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
         </div>
         <div class="menu_items">
-            <div class="container">
+            <div class="sidebar1">
                 <div class="title">
                     <h2>Menu</h2>
                 </div>
                 <div class="see_more">
-                    <ion-icon class="all" name="eye-outline"></ion-icon>
                     <a href="./menu.html">See More</a>
                 </div>
             </div>
@@ -57,7 +60,7 @@
                 <a href="./menu.html">
                     <div class="item">
                         <div class="image">
-                            <img src="./img/food2.jpg" alt="">
+                            <img src="./img" alt="">
                         </div>
                         <div class="title">
                             <h3>Best pizza</h3>
@@ -97,7 +100,7 @@
             <a href="./menu.html">
                 <div class="item">
                     <div class="image">
-                        <img src="./img/food4.jpg" alt="">
+                        <img width="460" class="donair-pizza" src="./img/donair pizza.jpeg" alt="">
                     </div>
                     <div class="title">
                         <h3>donair pizza</h3>
@@ -116,25 +119,19 @@
         </div>
         </a>
     </div>
-    <div class="map">
-        <div style="width: 100%"><iframe width="100%" height="500" frameborder="0" scrolling="no" marginheight="0"
-                marginwidth="0"
-                src="https://maps.google.com/maps?width=100%25&amp;height=500&amp;hl=en&amp;q=1%20Grafton%20Street,%20Dublin,%20Ireland+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
-        </div>
     </div>
-    </div>
-    <section>
+    <div class="sidebar2">
         <h3>
             Best in feed This Week
         </h3>
-        
-    </section>
+
+    </div>
     <div class="footer">
         <div class="trademark">
             All content © 2020 Okotoks Pizza
         </div>
         <div class="logo">
-            <img src="./img/logo.png" alt="">
+            <img src="./img/okotoks-pizza-logo.png" alt="">
         </div>
         <div class="links">
             <a href="tel:+17167934">+1-716-7934</a>
@@ -142,7 +139,7 @@
         </div>
     </div>
     <!-- icon -->
-    <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
+
 
 </body>
 
