--- a/final-okotoks/with-sidebar/Okotoks Pizza new/menu.html
+++ b/final-okotoks/with-sidebar/Okotoks Pizza new/menu.html
@@ -14,17 +14,16 @@
     <title>menu</title>
 </head>
 
-<body>
+<body class="grid-wrapper">
 
     <div class="header">
         <div class="navbar">
             <div class="logo">
-                <img src="./img/logo.png" alt="">
+                <img src="./img/okotoks-pizza-logo.png" alt="">
             </div>
             <div class="links">
                 <a href="./home.html">Home</a>
                 <a href="./aboutus.html">About Us</a>
-                <a href="./cart.html">cart</a>
                 <a href="./menu.html">Menu</a>
             </div>
             <div class="phone">
@@ -33,7 +32,7 @@
             </div>
         </div>
     </div>
-    <div>
+    <div class="sidebar1">
         <h3>
            Okotoks pizza
         </h3>
@@ -85,7 +84,7 @@
                 <a href="./menu.html">
                     <div class="item">
                         <div class="image">
-                            <img src="./img/food2.jpg" alt="">
+                            <img src= alt="">
                         </div>
                         <div class="title">
                             <h3>Best pizza</h3>
@@ -597,7 +596,7 @@
             </div>
         </div>
     </div>
-    <div>
+    <div class="sidebar2">
         <h3>
             Best Feed In This Week
         </h3>
@@ -640,7 +639,7 @@
             All content © 2020 Okotoks Pizza
         </div>
         <div class="logo">
-            <img src="./img/logo.png" alt="">
+            <img src="./img/okotoks-pizza-logo.png" alt="">
         </div>
         <div class="links">
             <a href="tel:+17167934">+1-716-7934</a>
@@ -649,18 +648,7 @@
     </div>
     </div>
     <!-- icon -->
-    <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
-    <!-- jquery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script>
-        $(document).ready(function () {
-            $(".navbar [href]").each(function () {
-                if (this.href == window.location.href) {
-                    $(this).addClass("active");
-                }
-            });
-        });
-    </script>
+   
 </body>
 
 </html>
