--- a/homepage.html
+++ b/homepage.html
@@ -12,7 +12,9 @@
 
 <body id="grid-container">
   <div id="header">
-    <div><h2>Okotoks pizza</h2></div>
+    <div>
+      <h2>Okotoks pizza</h2>
+    </div>
     <div>two</div>
     <div>three</div>
     <div><a href="#anchor">Link To Lower</a></div>
@@ -27,9 +29,11 @@
       dicta facere fugit iusto quas a. Architecto, optio?
     </div>
     <div>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/nEfcKExVKjo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media;
+      <section>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/nEfcKExVKjo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media;
     gyroscope; picture-in-picture" allowfullscreen>
-      </iframe>
+        </iframe>
+      </section>
       <img src="delish-homemade-pizza-horizontal-1542312378.png" alt="photo of a pizza ,birds eye" class="pizzaphoto">
     </div>
   </div>
@@ -41,7 +45,7 @@
   </div>
 
 
-  <div id="anchor">Bottom    &copy;file:///Users/ngurenjoroge/Innotech/Projects/okotoks%20pizza/homepage.html#anchor</div>
+  <div id="anchor">Bottom &copy;file:///Users/ngurenjoroge/Innotech/Projects/okotoks%20pizza/homepage.html#anchor</div>
 
 
 </body>
