improved alignment of images

--- a/final-okotoks/with-sidebar/Okotoks Pizza new/home.html
+++ b/final-okotoks/with-sidebar/Okotoks Pizza new/home.html
@@ -99,8 +99,7 @@
             </a>
             <a href="./menu.html">
                 <div class="item">
-                    <div class="image">
-                        <img width="460" class="donair-pizza" src="./img/donair pizza.jpeg" alt="">
+                    <div class="donair-image">
                     </div>
                     <div class="title">
                         <h3>donair pizza</h3>
