--- a/final-okotoks/with-sidebar/Okotoks Pizza new/home.html
+++ b/final-okotoks/with-sidebar/Okotoks Pizza new/home.html
@@ -48,11 +48,11 @@
                 src="https://maps.google.com/maps?width=100%25&amp;height=500&amp;hl=en&amp;q=1%20Grafton%20Street,%20Dublin,%20Ireland+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
         </div>
         <div class="menu_items">
-            <div class="sidebar1">
+            <div class="menu-title">
                 <div class="title">
                     <h2>Menu</h2>
                 </div>
-                <div class="see_more">
+                <div class="see-more-link">
                     <a href="./menu.html">See More</a>
                 </div>
             </div>
